# socketify_ws

./: .env  README.md  app.py  pyproject.toml  speech_service.py  speech_session.py
